--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  web_scraper: ^0.1.4
+  get: ^4.0.0-nullsafety.2
+  uuid: ^3.0.1
+  cached_network_image: ^3.0.0-nullsafety
+  asset_cache: ^1.0.0+1
+  expandable: ^5.0.1
+  animate_do: ^2.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -45,9 +52,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/thumbnails/
+    - assets/images/site_logo/
+    - assets/logo/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
