--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   asset_cache: ^1.0.0+1
   expandable: ^5.0.1
   animate_do: ^2.0.0
+  curved_navigation_bar: ^0.4.0-nullsafety.0
 
 
   # The following adds the Cupertino Icons font to your application.
