--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   expandable: ^5.0.1
   animate_do: ^2.0.0
   curved_navigation_bar: ^0.4.0-nullsafety.0
+  simple_gesture_detector: ^0.2.0
 
 
   # The following adds the Cupertino Icons font to your application.
