--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,8 @@ dependencies:
   animate_do: ^2.0.0
   curved_navigation_bar: ^0.4.0-nullsafety.0
   simple_gesture_detector: ^0.2.0
-
+  get_storage: ^2.0.1
+  flutter_staggered_grid_view: ^0.4.0-nullsafety.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
