--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,9 @@ dependencies:
   simple_gesture_detector: ^0.2.0
   get_storage: ^2.0.1
   flutter_staggered_grid_view: ^0.4.0-nullsafety.3
+  permission_handler: ^6.1.1
+  fab_circular_menu: ^1.0.2
+  hovering: ^1.0.4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
